# Charles-game-factory01

./: .env.production  .gitignore  .vercelignore  CONSOLIDATION_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  README.md  VERCEL_DEPLOYMENT.md  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: README.md  __init__.py  index.py
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/backend/: __init__.py  config.py  main.py
backend/backend/api/: health.py  rooms.py  scores.py
backend/backend/models/: __init__.py  rooms.py  scores.py
backend/backend/services/: __init__.py  rooms_service.py  scores_service.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_rooms.py  test_scores.py
docs/: architecture.md  future-work.md
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/assets/: README.md
frontend/src/: main.ts
frontend/src/__tests__/: GameState.test.ts  levels.test.ts  setup.ts
frontend/src/config/: levels.ts
frontend/src/core/: Events.ts  GameState.ts
frontend/src/objects/: Coin.ts  Obstacle.ts  Player.ts
frontend/src/scenes/: BootScene.ts  GameOverScene.ts  GameScene.ts  MenuScene.ts
frontend/src/services/: api.ts
frontend/src/ui/: HUD.ts
